few more changes as part of import holdings refactoring.